--- a/main.css
+++ b/main.css
@@ -4,28 +4,34 @@
     box-sizing: border-box;
 }
 
+html {
+    background-color: var(--tg-theme-bg-color);
+}
+
 .card {
     padding: 24px;
     display: block;
     font-family: Arial;
-    color: black;
+    color: var(--tg-theme-text-color);
 }
 
 .card > input {
     margin-top: 12px;
     display: flex;
     width: 100%;
-    border: 2px solid #bbbbbb;
+    border: 1.5px solid #bbbbbb;
     padding: 12px;
     font-size: 14px;
     border-radius: 8px;
+    outline: none;
 }
 .card > select {
     margin-top: 12px;
     display: flex;
     width: 100%;
-    border: 2px solid #bbbbbb;
+    border: 1.5px solid #bbbbbb;
     padding: 12px;
     font-size: 14px;
     border-radius: 8px;
+    outline: none;
 }
